--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <script src="main.js">
@@ -13,5 +14,9 @@
    <script src="operadoresMatematicos.js"></script>
 
    <script src="operadoresDeComparacion.js"></script>
+
+   <script src="estructuradeControlif.js"></script>
+
+   <h1 >Alejos</h1>
 </body>
 </html>
